fix: 타임테이블 조회시 전체 면접 시간 반환 #81