@@ -12,41 +12,56 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Schema(description = "면접 타임슬롯 및 배정된 지원자 정보")
+@Schema(description = "면접 일자별 스케줄 요약")
 public record InterviewScheduleDTO(
         @Schema(description = "면접 일자") @DateFormatDot LocalDate date,
         @Schema(description = "시작 시간") @TimeFormat LocalTime startTime,
         @Schema(description = "종료 시간") @TimeFormat LocalTime endTime,
-        @Schema(description = "지원자 목록") List<ApplicantInfo> applicants,
-        @Schema(description = "면접관 목록") List<UserResponseDTO.SummaryForTimeSlot> interviewers,
-        @Schema(description = "안내자 목록") List<UserResponseDTO.SummaryForTimeSlot> assistants
+        @Schema(description = "면접 소요 시간") Short interviewDuration,
+        @Schema(description = "해당 날짜의 타임슬롯 목록") List<InterviewSlotDTO> timeSlots
 ) {
+    public static InterviewScheduleDTO from(
+            LocalDate date,
+            LocalTime startTime,
+            LocalTime endTime,
+            Short interviewDuration,
+            List<InterviewSlotDTO> timeSlots
+    ) {
+        return new InterviewScheduleDTO(date, startTime, endTime, interviewDuration, timeSlots);
+    }
 
-    public static InterviewScheduleDTO from(TimeSlot slot) {
-        List<TimeSlotUser> users = slot.getTimeSlotUsers();
+    @Schema(description = "면접 타임슬롯 및 배정된 지원자 정보")
+    public record InterviewSlotDTO(
+            @Schema(description = "면접 일자") @DateFormatDot LocalDate date,
+            @Schema(description = "시작 시간") @TimeFormat LocalTime startTime,
+            @Schema(description = "종료 시간") @TimeFormat LocalTime endTime,
+            @Schema(description = "지원자 목록") List<ApplicantInfo> applicants,
+            @Schema(description = "면접관 목록") List<UserResponseDTO.SummaryForTimeSlot> interviewers,
+            @Schema(description = "안내자 목록") List<UserResponseDTO.SummaryForTimeSlot> assistants
+    ) {
+        public static InterviewSlotDTO from(TimeSlot slot) {
+            List<TimeSlotUser> users = slot.getTimeSlotUsers();
 
-        List<UserResponseDTO.SummaryForTimeSlot> interviewers = users.stream()
-                .filter(u -> u.getRole() == InterviewRole.INTERVIEWER)
-                .map(u -> UserResponseDTO.SummaryForTimeSlot.from(u.getUser(), u.getRole()))
-                .toList();
+            List<UserResponseDTO.SummaryForTimeSlot> interviewers = users.stream()
+                    .filter(u -> u.getRole() == InterviewRole.INTERVIEWER)
+                    .map(u -> UserResponseDTO.SummaryForTimeSlot.from(u.getUser(), u.getRole()))
+                    .toList();
 
-        List<UserResponseDTO.SummaryForTimeSlot> assistants = users.stream()
-                .filter(u -> u.getRole() == InterviewRole.ASSISTANT)
-                .map(u -> UserResponseDTO.SummaryForTimeSlot.from(u.getUser(), u.getRole()))
-                .toList();
+            List<UserResponseDTO.SummaryForTimeSlot> assistants = users.stream()
+                    .filter(u -> u.getRole() == InterviewRole.ASSISTANT)
+                    .map(u -> UserResponseDTO.SummaryForTimeSlot.from(u.getUser(), u.getRole()))
+                    .toList();
 
-        return new InterviewScheduleDTO(
-                slot.getDate(),
-                slot.getStartTime(),
-                slot.getEndTime(),
-                slot.getApplications().stream()
-                        .map(ApplicantInfo::from)
-                        .collect(Collectors.toList()),
-                interviewers,
-                assistants
-        );
+            return new InterviewSlotDTO(
+                    slot.getDate(),
+                    slot.getStartTime(),
+                    slot.getEndTime(),
+                    slot.getApplications().stream().map(ApplicantInfo::from).toList(),
+                    interviewers,
+                    assistants
+            );
+        }
     }
 
     @Schema(description = "면접 배정 지원자 정보")
@@ -84,4 +99,3 @@ public record InterviewScheduleDTO(
         }
     }
 }
-
